static/css/base.css
/* General CSS elements applying site-wide */

* {
    box-sizing: border-box;
    transition: 0.2s all;
    font-family: 'Nunito', sans-serif;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    padding-top: 93px;
    margin-bottom: 450px;
}

audio {
    background-color: #401c20;
}

footer {
    background-color: #401c20;
    color: white;
    height: 400px;
    max-height: 400px;
    position: absolute;
    bottom: 0;
    width: 100%;
    overflow-y: hidden;
}

footer i {
    color: white;
}

.container-max-width {
    max-width: 1500px !important;
}

a,
a:hover {
    text-decoration: none;
    color: black;
}

ul {
    text-decoration: none;
}

.bg-cherry {
    background-image: linear-gradient(#86424d, #401c20);
}

.text-cherry {
    color: #401c20;
}

.text-white {
    color: white !important;
}

.border-white {
    border-color: white;
}

.hr-75 {
    width: 75%; 
    text-align: left; 
    margin-left: 0;
}

.site-header {
    height: 70px;
}

.header-dropdown-link {
    width: 80px;
}

.logo-image {
    max-height: 70px;
}

.logo-image-sm {
    max-height: 30px;
}

.logo-btn:hover {
    box-shadow: 1px 1px 2px 0 #00000080;
    transform: scale(0.98);
}

.btn, .header-btn, .logo-btn {
    transition: all 0.09s ease;
    box-shadow: 2px 2px 2px 0 #00000080;
}

.btn:hover, .header-btn:hover {
    box-shadow: 1px 1px 2px 0 #00000080;
    transform: scale(0.96);
}

.header-btn, .logo-btn {
    padding: 3px 10px 2px 10px;
    border: 1px solid #32161933;
    border-radius: 5px;
}

.btn-cherry {
    color: #401c20;
    background-color: white;
    border: 1px solid #401c20;
    font-weight: bold;
    font-size: 1.2em;
}

.btn-cherry-inverted {
    background-color: #401c20;
    color: #eeeeee;
    border: 1px solid #401c20;
    font-weight: bold;
    font-size: 1.2em;
}

.btn-cherry-inverted:hover {
    color: #eeeeee;
    transform: scale(0.97);
}

.btn-inactive {
    color: #bbbbbb;
    border: 1px solid #bbbbbb;
    font-weight: bold;
    font-size: 1.2em;
}

.btn-inactive:hover {
    color: #bbbbbb;
    transform: none;
    box-shadow: 2px 2px 2px 0 #00000080;
}

.mailchimp-subscribe {
    color: black !important;
}

.card {
    background-color: #f1f1f1;
    transition: all 0.09s ease;
    box-shadow: 3px 3px 3px 0 #00000080;
}

.card:hover {
    box-shadow: 1px 1px 2px 0 #00000080;
    transform: scale(0.99);
}

.non-reactive {
    box-shadow: none !important;
    transform: none !important;
}

.card-title {
    margin-bottom: 0 !important;
}

.card-body {
    padding: 0.8rem !important;
}

.card-transparent {
    background-color: transparent;
}

.max-width-card {
    max-width: 300px;
}

.ml-large {
    margin-left: 20%;
}

.oauth-link {
    font-size: 1.1rem;
    font-weight: bold;
    font-style: italic;
}

.oauth-link:hover {
    border-bottom: 1px solid grey;
}

/* CSS for Welcome Page */

.hero-section-large-screen {
    background-image: url('/media/hero_image.webp');
    background-size: contain;
    background-position: right;
    background-repeat: no-repeat;
    height: 100% !important;
}

.hero-section-medium-screen {
    background-image: url('/media/hero_image.webp');
    background-size: contain;
    background-position: right;
    background-repeat: no-repeat;
    height: 50vh !important;
}

.hero-section-small-screen {
    background-image: url('/media/hero_image_small_screen.webp');
    background-size: contain;
    background-position: right;
    background-repeat: no-repeat;
    height: 30vh !important;
}

/* CSS for Checkout page */

.checkout-button {
    background-color: #000044;
    color: #dddddd;
    text-transform: uppercase;
    border: 1px solid #000044;
    border-radius: 5px;
    font-weight: bold;
    font-size: 2.1em;
    width: 100%;
    transition: all 0.05s;
    box-shadow: 4px 4px 5px 0 #00000077;
}

.checkout-button:hover {
    color: #dddddd;
    box-shadow: 2px 2px 2px 0 #00000077;
    transform: scale(0.98);
}

.checkout-panel-img {
    max-height: 70vh;
}

.payment-spinner {
    background-image: radial-gradient(#000000cc, #000000aa);
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    pointer-events: none !important;
    cursor: none !important;
    user-select: none !important;
    z-index: 10;
}

.spinner-icon {
    font-size: 2rem;
    font-weight: bold;
}

/* CSS for basket page */

.btn-quantity {
    color: white;
    background-color: #401c20;
    height: 40px;
}

.btn-quantity:hover {
    color: white;
}

.quantity-input {
    height: 40px;
    z-index: 9999;
}

.quantity-form-element {
    width: 150px;
}

.increment-qty {
    border-radius: 0 50% 50% 0 !important;
}

.decrement-qty {
    border-radius: 50% 0 0 50% !important;
}

/* CSS for Video Lessons app */

.thumbnail {
    width: 80px;
    height: 80px;
}

.large-icon {
    font-size: 2.2rem;
}

.thumbnail-tiny {
    width: 40px;
    height: 40px;
}

video {
    width: 100%;
}

.video-thumbnail {
    border: 1px solid #00000044;
    border-radius: 5px;
    width: 100%;
    height: 100%;
    transition: all 0.09s ease;
    box-shadow: 3px 3px 3px 0 #00000080;
}

.video-thumbnail:hover {
    box-shadow: 1px 1px 2px 0 #00000080;
    transform: scale(0.98);
}

.video-thumbnail-selected {
    border: 2px solid blue;
    box-shadow: 1px 1px 2px 0 #00000080;
    transform: scale(0.98);
}

.video-locked-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    border: 1px solid grey;
    border-radius: 5px;
    max-width: 100%;
    max-height: 100%;
}

.crowd-image-bg {
    background-image: url('/media/crowd_tall_colour.webp');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 50vh !important;
}


/* CSS for Products app */

.associated-products-display {
    background-image: url('/media/gig_monochrome.webp');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.thick-border-bottom {
    border-bottom: 2px solid gray !important;
}

.category-link {
    font-size: 1.5rem;
    color: #401c20;
}

.category-link:hover {
    text-decoration: underline;
}

/* Styling for the messages div */
.message-container {
    position: fixed;
    top: 30px;
    right: 50px;
    width: 300px;
    background-color: #f1f1f1;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
    color: black;
    font-weight: bold;
    border-radius: 10px;
    z-index: 10000;
}

.message-container .btn-close {
    position: absolute;
    top: 10px;
    right: 10px;
}

/* These elements style the product display page */
.product-description {
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.product-name {
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-size: 1rem;
}

.special-offer-banner {
    background-image: linear-gradient(#f79032, #fdca37);
    color: black;
}

.special-offer-tag {
    background-image: linear-gradient(#f79032, #fdca37);
    color: white;
    font-weight: bold;
    font-size: 0.8em;
    border-radius: 5px;
}

.special-offer-large-tag {
    position: absolute;
    left: 10px;
    top: 10px;
    background-image: linear-gradient(#f79032, #fdca37);
    color: white;
    font-weight: bold;
    font-size: 1.3em;
    border-radius: 5px;
}

.slanted-tag {
    position: absolute;
    transform: translate(1rem, 2rem) rotate(-45deg);
    background-color: orange;
    font-weight: bold;
    font-size: 1.1rem;
    color: white;
    padding: 10px;
    border-radius: 10px;
}

.out-of-stock-overlay {
    background-image: radial-gradient(#00000033, #00000066);
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
}

/* CSS for Staff product pages */

.staff-product-title {
    cursor: pointer;
}

.out-of-stock-bg {
    background-image: radial-gradient(#00000033, #00000066);
}

.stock-low-badge {
    background-image: linear-gradient(#f79032, #fdca37);
    color: white;
    font-weight: bold;
    border-radius: 5px;
}

.out-of-stock-badge {
    background-image: linear-gradient(#910c03, #ff5e5b);
    color: white;
    font-weight: bold;
    border-radius: 5px;
}

.special-offer-badge {
    color: green;
    font-weight: bold;
    border-radius: 5px;
}

.out-of-stock-tag {
    position: absolute;
    left: 10px;
    top: 10px;
    background-color: rgb(132, 86, 1);
    font-weight: bold;
    text-transform: uppercase;
    font-size: 1.1rem;
    color: white;
    padding: 5px 10px;
    border-radius: 10px;
}


/* Mailchimp styles */
#mc_embed_signup {
    background: #fff;
    color: #401c20;
    clear: left;
    font: 14px Helvetica, Arial, sans-serif;
    width: 600px;
    max-width: 100%;
}

/* Media queries site-wide */
@media screen and (max-width:576px) {
    .quantity-form-element {
        transform: scale(0.7);
    }

    .thumbnail {
        width: 40px;
        height: 40px;
    }

    td h5 {
        font-size: 0.8rem;
    }

    .special-offer-tag {
        font-size: 0.5em;
    }

    .trash-can-form {
        transform: scale(0.8);
    }

    .basket-view-table td,
    th {
        font-size: 0.8rem;
    }

    .category-link {
        font-size: 0.8rem;
        margin-left: 5px !important;
        margin-right: 5px !important;
    }

    .container-fluid {
        width: 100% !important;
    }

}

@media screen and (max-width: 767px) {
    body {
        padding-top: 56px;
    }

    .special-offer-banner {
        font-size: 0.8rem;
    }

    .special-offer-banner h1 {
        font-size: 1.2rem;
    }
}

